--- a/home_fix/user_center/templates/user_center/profile.html
+++ b/home_fix/user_center/templates/user_center/profile.html
@@ -167,6 +167,10 @@
                                         </div>
                                     </div>
                                     <div class="col">
+                                         {% if user.tier == -1 %}
+                                            No Subscription
+                                        {% endif %}
+
                                         {% if user.tier == 1 %}
                                             Starter
                                         {% endif %}
