--- a/home_fix/user_center/templates/user_center/my_request_page.html
+++ b/home_fix/user_center/templates/user_center/my_request_page.html
@@ -32,7 +32,8 @@
             {% for order in order_list %}
                 <tr>
                     <td>{{ order.id }}</td>
-                    <td>{{ order.service.id }}</td>
+                    <td><a href="{% url 'service:service_detail' order.service.id  %}"
+                               />{{ order.service.id }}</td>
                     <td>{{ order.service.user }}</td>
                     <td>{{ order.timestamp }}</td>
                     <td>{{ order.service.coins_charged}}</td>
